Add real data to forecast for supply

--- a/150505/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis.csproj
+++ b/150505/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis.csproj
@@ -63,7 +63,10 @@
     </Compile>
     <Compile Include="GetFromM3.cs" />
     <Compile Include="Get_FromSimulatedM3.cs" />
-    <Compile Include="PrognosInfo.cs" />
+    <Compile Include="NavSQLSupplyInformation.cs" />
+    <Compile Include="NavSQLExecute.cs" />
+    <Compile Include="PrognosInfoForSupply.cs" />
+    <Compile Include="PrognosInfoSales.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextBoxForm.cs">
