--- a/150505/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis.csproj
+++ b/150505/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis.csproj
@@ -69,6 +69,7 @@
     <Compile Include="PrognosInfoSales.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQLCallsSalesCustomerInfo.cs" />
     <Compile Include="TextBoxForm.cs">
       <SubType>Form</SubType>
     </Compile>
