Fix bugs. New assortment features

--- a/150505/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis.csproj
+++ b/150505/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis.csproj
@@ -72,6 +72,7 @@
     </Compile>
     <Compile Include="GetFromM3.cs" />
     <Compile Include="Get_FromSimulatedM3.cs" />
+    <Compile Include="KampaignInfo.cs" />
     <Compile Include="NavSQLSupplyInformation.cs" />
     <Compile Include="NavSQLExecute.cs" />
     <Compile Include="PrognosInfoForSupply.cs" />
