--- a/150505/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis.csproj
+++ b/150505/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis.csproj
@@ -23,8 +23,8 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <InstallUrl>\\dkfile02.dk.lactadom.ad\PMO\IS_SKMJ_MALMÖ\PublishedApplications\ForecastApplication\</InstallUrl>
-    <ApplicationRevision>7</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.8.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -42,7 +42,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -52,10 +52,10 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>1CE5D591D81E78DB3BA2C35729E5953D33F573BE</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>A6A1B5581B1BAC8242AFD0E896EB74C70AFE0EAC</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>WindowsFormsForecastLactalis_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>WindowsFormsForecastLactalis_31_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -78,14 +78,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BalanceId.cs" />
+    <Compile Include="ChainStructureHandler.cs" />
     <Compile Include="ClassSQLQlickViewDataLayer.cs" />
-    <Compile Include="ClassStaticVaribles.cs" />
-    <Compile Include="FileToSendInfoForPoduct.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="ISalesRow.cs" />
+    <Compile Include="SaleInfo.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="SaleInfo.Designer.cs">
+      <DependentUpon>SaleInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SalesRow.cs" />
+    <Compile Include="SalesRowNavision.cs" />
+    <Compile Include="StaticVariables.cs" />
+    <Compile Include="FileToSendInfoForPoduct.cs" />
+    <Compile Include="FormSales.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSales.Designer.cs">
+      <DependentUpon>FormSales.cs</DependentUpon>
     </Compile>
     <Compile Include="FormLogin.cs">
       <SubType>Form</SubType>
@@ -101,13 +112,14 @@
     </Compile>
     <Compile Include="GetFromM3.cs" />
     <Compile Include="Get_FromSimulatedM3.cs" />
-    <Compile Include="KampaignInfo.cs" />
+    <Compile Include="PromotionInfo.cs" />
     <Compile Include="NavSQLSupplyInformation.cs" />
     <Compile Include="NavSQLExecute.cs" />
     <Compile Include="PrognosInfoForSupply.cs" />
     <Compile Include="PrognosInfoSales.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PurchaseOrderLine.cs" />
     <Compile Include="SQLCallsSalesCustomerInfo.cs" />
     <Compile Include="TextBoxForm.cs">
       <SubType>Form</SubType>
@@ -115,12 +127,13 @@
     <Compile Include="TextBoxForm.Designer.cs">
       <DependentUpon>TextBoxForm.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FormSales.resx">
+      <DependentUpon>FormSales.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="FormSupply.resx">
       <DependentUpon>FormSupply.cs</DependentUpon>
@@ -135,9 +148,13 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SaleInfo.resx">
+      <DependentUpon>SaleInfo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TextBoxForm.resx">
       <DependentUpon>TextBoxForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -147,6 +164,11 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="WindowsFormsForecastLactalis_1_TemporaryKey.pfx" />
+    <None Include="WindowsFormsForecastLactalis_20_TemporaryKey.pfx" />
+    <None Include="WindowsFormsForecastLactalis_2_TemporaryKey.pfx" />
+    <None Include="WindowsFormsForecastLactalis_30_TemporaryKey.pfx" />
+    <None Include="WindowsFormsForecastLactalis_31_TemporaryKey.pfx" />
     <None Include="WindowsFormsForecastLactalis_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
