--- a/150505/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis.csproj
+++ b/150505/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis.csproj
@@ -23,7 +23,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <InstallUrl>\\dkfile02.dk.lactadom.ad\PMO\IS_SKMJ_MALMÖ\PublishedApplications\ForecastApplication\</InstallUrl>
-    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationRevision>3</ApplicationRevision>
     <ApplicationVersion>2.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -90,6 +90,12 @@
     </Compile>
     <Compile Include="SalesRow.cs" />
     <Compile Include="SalesRowNavision.cs" />
+    <Compile Include="ScrollToProdNumber.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ScrollToProdNumber.Designer.cs">
+      <DependentUpon>ScrollToProdNumber.cs</DependentUpon>
+    </Compile>
     <Compile Include="StaticVariables.cs" />
     <Compile Include="FileToSendInfoForPoduct.cs" />
     <Compile Include="FormSales.cs">
@@ -150,6 +156,9 @@
     </Compile>
     <EmbeddedResource Include="SaleInfo.resx">
       <DependentUpon>SaleInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ScrollToProdNumber.resx">
+      <DependentUpon>ScrollToProdNumber.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TextBoxForm.resx">
       <DependentUpon>TextBoxForm.cs</DependentUpon>
