--- a/150505/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis.csproj
+++ b/150505/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis.csproj
@@ -23,7 +23,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <InstallUrl>\\dkfile02.dk.lactadom.ad\PMO\IS_SKMJ_MALMÖ\PublishedApplications\ForecastApplication\</InstallUrl>
-    <ApplicationRevision>5</ApplicationRevision>
+    <ApplicationRevision>9</ApplicationRevision>
     <ApplicationVersion>2.1.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -52,10 +52,10 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>837A210DBFF2C69E01B4DCE87077F9011AE14D0B</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>07BE13EB034613C2FD83FC56A8450A2C5D4FE027</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>WindowsFormsForecastLactalis_45_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>WindowsFormsForecastLactalis_48_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -196,6 +196,9 @@
     <None Include="WindowsFormsForecastLactalis_43_TemporaryKey.pfx" />
     <None Include="WindowsFormsForecastLactalis_44_TemporaryKey.pfx" />
     <None Include="WindowsFormsForecastLactalis_45_TemporaryKey.pfx" />
+    <None Include="WindowsFormsForecastLactalis_46_TemporaryKey.pfx" />
+    <None Include="WindowsFormsForecastLactalis_47_TemporaryKey.pfx" />
+    <None Include="WindowsFormsForecastLactalis_48_TemporaryKey.pfx" />
     <None Include="WindowsFormsForecastLactalis_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
