--- a/150505/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis.csproj
+++ b/150505/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis.csproj
@@ -23,7 +23,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <InstallUrl>\\dkfile02.dk.lactadom.ad\PMO\IS_SKMJ_MALMÖ\PublishedApplications\ForecastApplication\</InstallUrl>
-    <ApplicationRevision>2</ApplicationRevision>
+    <ApplicationRevision>3</ApplicationRevision>
     <ApplicationVersion>2.5.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -52,10 +52,10 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>6195CE0B7C5607AE99E2EDB05F3F5289D730AB32</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>D72F9B62D9D8C5B65CB6339FDF6D57C3037FA63B</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>WindowsFormsForecastLactalis_78_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>WindowsFormsForecastLactalis_79_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -239,6 +239,7 @@
     <None Include="WindowsFormsForecastLactalis_76_TemporaryKey.pfx" />
     <None Include="WindowsFormsForecastLactalis_77_TemporaryKey.pfx" />
     <None Include="WindowsFormsForecastLactalis_78_TemporaryKey.pfx" />
+    <None Include="WindowsFormsForecastLactalis_79_TemporaryKey.pfx" />
     <None Include="WindowsFormsForecastLactalis_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
